logged in page list and search bar

--- a/frontend/templates/semantic-ui/homepage.html
+++ b/frontend/templates/semantic-ui/homepage.html
@@ -6,7 +6,7 @@
     <meta content="width=device-width, initial-scale=1, maximum-scale=2, user-scalable=no" name="viewport" />
     <meta content="Semantic-UI-Forest, collection of design, themes and templates for Semantic-UI." name="description" />
     <meta content="Semantic-UI, Theme, Design, Template" name="keywords" />
-    <meta content="PPType" name="author" />
+    <meta content="landing" name="Fan Bu, Bohan Zhang" />
     <meta content="#ffffff" name="theme-color" />
     <title>DB Project-Let the music flow!</title>
     <link href="../../static/dist/semantic-ui/semantic.min.css" rel="stylesheet" type="text/css" />
@@ -17,7 +17,7 @@
   <body>
     <div class="ui large top fixed hidden menu">
       <div class="ui container">
-        <a class="active item">Home</a><a class="item">Work</a><a class="item">Company</a><a class="item">Careers</a>
+        <a class="active item">Home</a><a class="item">Album</a><a class="item">Artist</a><a class="item">Playlist</a>
         <div class="right menu">
           <div class="item">
             <a class="ui button">Log in</a>
@@ -28,24 +28,28 @@
         </div>
       </div>
     </div>
+
     <!--Sidebar Menu-->
     <div class="ui vertical inverted sidebar menu">
-      <a class="active item">Home</a><a class="item">Work</a><a class="item">Company</a><a class="item">Careers</a><a class="item">Login</a><a class="item">Signup</a>
+      <a class="active item">Home</a><a class="item">Album</a><a class="item">Artist</a><a class="item">Playlist</a><a class="item">Login</a><a class="item">Signup</a>
     </div>
+
     <!--Page Contents-->
     <div class="pusher">
       <div class="ui inverted vertical masthead center aligned segment">
+        
         <div class="ui container">
           <div class="ui large secondary inverted pointing menu">
-            <a class="toc item"><i class="sidebar icon"></i></a><a class="active item">Home</a><a class="item">Work</a><a class="item">Company</a><a class="item">Careers</a>
+            <a class="toc item"><i class="sidebar icon"></i></a><a class="active item">Home</a><a class="item">Album</a><a class="item">Artist</a><a class="item">Playlist</a>
             <div class="right item">
               <a class="ui inverted button">Log in</a><a class="ui inverted button">Sign Up</a>
             </div>
           </div>
         </div>
+        
         <div class="ui text container">
           <h1 class="ui inverted header">
-            BB Music Service
+            bb Music Service
           </h1>
           <h2>
             Listen to whatever you want when you want to.
@@ -178,6 +182,8 @@
         background-image: url('../../static/images/templates/semantic-ui/background.png') !important;
         background-size: cover !important;
       }
+
+      
 
       .masthead .logo.item img {
         margin-right: 1em;
